--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -71,7 +71,7 @@
         "update_webui        = False  # @param {type:'boolean'}\n",
         "update_extensions   = True  # @param {type:'boolean'}\n",
         "commit_hash         = \"\"  # @param {type:'string'}\n",
-        "dpm++_2m_v2_patch   = True  # @param {type:'boolean'}\n",
+        "dpmpp_2m_v2_patch   = True  # @param {type:'boolean'}\n",
         "# @markdown ### **Optimization Config**\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
         "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
@@ -147,7 +147,8 @@
         "\n",
         "def mount_func(directory):\n",
         "    output_dir = os.path.join(repo_dir, \"outputs\")\n",
-        "\n",
+        "    \n",
+        "    print_line(80, color=\"green\")\n",
         "    if mount_drive:\n",
         "        if not os.path.exists(directory):\n",
         "            from google.colab import drive\n",
@@ -155,7 +156,6 @@
         "            drive.mount(os.path.dirname(directory))\n",
         "        output_dir  = os.path.join(directory, output_drive_folder)\n",
         "        cprint(\"Set default output path to:\", output_dir, color=\"green\")\n",
-        "        cprint()\n",
         "\n",
         "    return output_dir\n",
         "\n",
@@ -289,15 +289,15 @@
         "\n",
         "    print_line(80, color=\"green\")\n",
         "\n",
-        "    if dpm++_2m_v2_patch:\n",
+        "    if dpmpp_2m_v2_patch:\n",
         "        dpmpp_2m_v2_url  = \"https://gist.githubusercontent.com/Linaqruf/514d40676e97a70ffc3a2451bbf51555/raw/3fa447ebfac6b98a25485374b70447f848267589/01-add-DPMPP-2M-V2.patch\"\n",
-        "        patch_repo(url=dpmpp_2m_v2_url, dir=patches_dir, cwd=repo_dir, whitespace_fix=True)\n",
+        "        patch_repo(url=dpmpp_2m_v2_url, dir=patches_dir, cwd=repo_dir, whitespace_fix=True, quiet=True)\n",
         "        shutil.rmtree(patches_dir)\n",
         "\n",
         "    if colab_optimizations:\n",
         "        lowram_patch_url = \"https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch\"\n",
         "        stable_diffusion_repo_dir = os.path.join(repo_dir, \"repositories/stable-diffusion-stability-ai\")\n",
-        "        patch_repo(url=lowram_patch_url, dir=patches_dir, cwd=stable_diffusion_repo_dir)\n",
+        "        patch_repo(url=lowram_patch_url, dir=patches_dir, cwd=stable_diffusion_repo_dir, quiet=True)\n",
         "        shutil.rmtree(patches_dir)\n",
         "\n",
         "        subprocess.run([\"sed\", \"-i\", f\"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\", os.path.join(repo_dir, \"modules\", \"sd_models.py\")])\n",
@@ -438,7 +438,7 @@
         "import os\n",
         "import subprocess\n",
         "from tqdm import tqdm\n",
-        "from colablib.sd_models.downloader import aria2_download\n",
+        "from colablib.sd_models.downloader import aria2_download, download\n",
         "from colablib.utils import config_utils, py_utils, git_utils\n",
         "from colablib.colored_print import cprint, print_line\n",
         "from colablib.utils.py_utils import get_filename\n",
@@ -452,8 +452,17 @@
         "t2i_adapter_model           = False  # @param {type: 'boolean'}\n",
         "# @markdown ### **SDv2.x ControlNet Model**\n",
         "control_v11_sd21_model      = False  # @param {type: 'boolean'}\n",
+        "# @markdown ### **Custom ControlNet Model**\n",
+        "# @markdown - Make sure your custom controlnet model has `sd15`/`sd21` in the filename.\n",
+        "# @markdown - Use comma separation for multiple URLs, e.g. `url1, url2, url3`.\n",
+        "custom_controlnet_url = \"\" #@param [\"\", \"https://huggingface.co/ioclab/ioc-controlnet/resolve/main/models/control_v1p_sd15_illumination.safetensors\", \"https://huggingface.co/ioclab/ioc-controlnet/resolve/main/models/control_v1p_sd15_brightness.safetensors\"] {allow-input: true}\n",
         "# @markdown ### **ControlNet Config**\n",
         "control_net_max_models_num  = 2      # @param {type:\"slider\", min:1, max:10, step:1}\n",
+        "\n",
+        "custom_controlnet_dict = {\n",
+        "    \"control_v1p_sd15_illumination\" : \"https://huggingface.co/ioclab/ioc-controlnet/resolve/main/models/control_v1p_sd15_illumination.safetensors\",\n",
+        "    \"control_v1p_sd15_brightness\"   : \"https://huggingface.co/ioclab/ioc-controlnet/resolve/main/models/control_v1p_sd15_brightness.safetensors\"\n",
+        "}\n",
         "\n",
         "annotator_dict = {\n",
         "    \"midas\"         : \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/dpt_hybrid-midas-501f0c75.pt\",\n",
@@ -559,6 +568,16 @@
         "        if cldm_model:\n",
         "            cldm_config(os.path.join(dst, filename))\n",
         "\n",
+        "\n",
+        "def custom_controlnet_download(urls, dst):\n",
+        "    for url in urls.split(\",\"):\n",
+        "        url = url.strip()\n",
+        "        if url != \"\":\n",
+        "            print_line(80, color=\"green\")\n",
+        "            filename = get_filename(url)\n",
+        "            download(url=url, filename=filename, dst=control_dir)\n",
+        "            cldm_config(os.path.join(dst, filename))\n",
+        "                \n",
         "def download_annotator(directory, desc):\n",
         "    for category, urls in tqdm(annotator_dict.items(), desc=cprint(desc, color=\"green\", tqdm_desc=True)):\n",
         "        if category == \"clip_vision\":\n",
@@ -592,10 +611,13 @@
         "        batch_download(control_v11_sd21_url, control_dir, \"Downloading SDv2.x ControlNet Model\", cldm_model=True)\n",
         "    if t2i_adapter_model:\n",
         "        batch_download(t2i_adapter_url, control_dir, \"Downloading SDv1.x Text2Image Adapter Model\", cldm_model=True)\n",
-        "\n",
-        "    elapsed_time = py_utils.calculate_elapsed_time(start_time)\n",
-        "    cprint()\n",
+        "    if custom_controlnet_url:\n",
+        "        print_line(80, color=\"green\")\n",
+        "        cprint(\" [-] Downloading Custom ControlNet Models...\", color=\"flat_yellow\")\n",
+        "        custom_controlnet_download(custom_controlnet_url, control_dir)\n",
+        "        \n",
         "    print_line(80, color=\"green\")\n",
+        "    elapsed_time = py_utils.calculate_elapsed_time(start_time)\n",
         "    cprint(f\"Download finished. Took {elapsed_time}.\", color=\"flat_yellow\")\n",
         "    cprint(\"All is done! Go to the next step.\", color=\"flat_yellow\")\n",
         "    print_line(80, color=\"green\")\n",
