fix: removed all deprecated docs

--- a/beta_notebook.ipynb
+++ b/beta_notebook.ipynb
@@ -19,7 +19,7 @@
         "# **Cagliostro Colab UI**\n",
         "All-in-One, Customizable and Flexible Stable Diffusion for Google Colab.\n",
         "\n",
-        "**Version 3.0.0** | [Github][link-to-github] | [What's New?][README] | [Pocketbook Guide][MANUAL] (outdated)\n",
+        "**Version 3.0.0** | [Github][link-to-github] | [What's New?][README]\n",
         "\n",
         "<!-- [visitor-badge]: https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui -->\n",
         "[visitor-badge]: https://api.visitorbadge.io/api/visitors?path=Cagliostro%20Colab%20UI&label=Visitors&labelColor=%2334495E&countColor=%231ABC9C&style=flat&labelStyle=none\n",
@@ -786,7 +786,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title ## **Start Cagliostro Colab UI** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#start-stable-diffusion-web-ui)</small></small>\n",
+        "#@title ## **Start Cagliostro Colab UI**\n",
         "\n",
         "import random\n",
         "import string\n",
@@ -1028,7 +1028,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title ## **Download Generated Images** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#download-generated-images)</small></small>\n",
+        "# @title ## **Download Generated Images**\n",
         "# @markdown Download file manually from files tab or save to Google Drive\n",
         "import os\n",
         "\n",
