re-fix: temporary patch hires fix prompt #42

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -293,6 +293,7 @@
         "        dpmpp_2m_v2_url  = \"https://gist.githubusercontent.com/Linaqruf/514d40676e97a70ffc3a2451bbf51555/raw/3fa447ebfac6b98a25485374b70447f848267589/01-add-DPMPP-2M-V2.patch\"\n",
         "        patch_repo(url=dpmpp_2m_v2_url, dir=patches_dir, cwd=repo_dir, whitespace_fix=True, quiet=True)\n",
         "        shutil.rmtree(patches_dir)\n",
+        "        cprint(\" [-] Hires Prompt patch done!\", color=\"green\")\n",
         "\n",
         "    if colab_optimizations:\n",
         "        lowram_patch_url = \"https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch\"\n",
@@ -316,6 +317,12 @@
         "        download_list_url = \"https://raw.githubusercontent.com/Linaqruf/sd-notebook-collection/main/config/download_list.txt\"\n",
         "        aria2_download(os.path.dirname(download_list), os.path.basename(download_list), download_list_url, quiet=True)\n",
         "\n",
+        "    if \"anapnoe\" in repo_name and \"9931e861dfb128735c4a928a7beb5b5c0af30593\" in current_commit_hash:\n",
+        "        hires_prompt_fix = \"https://gist.githubusercontent.com/Linaqruf/8fef456d53604f8c3bcd16722ea7d2f6/raw/a3382087c6e32f9a171f4b5e8aeb572a61682801/0001-Add-New-Label-for-Hires-Prompt.patch\"\n",
+        "        patch_repo(url=hires_prompt_fix, dir=patches_dir, cwd=repo_dir, whitespace_fix=True, quiet=False)\n",
+        "        shutil.rmtree(patches_dir)\n",
+        "        cprint(\"Hires Prompt patch done!\")\n",
+        "\n",
         "    elapsed_time = py_utils.calculate_elapsed_time(start_time)\n",
         "    print_line(80, color=\"green\")\n",
         "    cprint(f\"Finished installation. Took {elapsed_time}.\", color=\"flat_yellow\")\n",
@@ -325,7 +332,8 @@
         "main()"
       ],
       "metadata": {
-        "id": "A6c7-qjDdb0X"
+        "id": "A6c7-qjDdb0X",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
