fix: oops wrong notebook https://github.com/Linaqruf/sd-notebook-collection/issues/42

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -77,7 +77,7 @@
         "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
         "colab_optimizations = True  # @param {type:'boolean'}\n",
         "# @markdown > Specify `mobile_optimizations` to keep colab tab alive for mobile users\n",
-        "mobile_optimizations = False  # @param {type:'boolean'}\n",
+        "mobile_optimizations = True  # @param {type:'boolean'}\n",
         "\n",
         "################################\n",
         "# DIRECTORY CONFIG\n",
@@ -198,7 +198,6 @@
         "    if ram_alloc_patch:\n",
         "        subprocess.run([\"apt\", \"install\",  'libunwind8-dev', \"-y\"], check=True)\n",
         "        ubuntu_deps(ram_patch_url, deps_dir, cprint(\"Installing RAM allocation patch\", color=\"green\", tqdm_desc=True))\n",
-        "        os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
         "\n",
         "def install_webui(repo_dir, desc):\n",
         "    try:\n",
@@ -273,12 +272,14 @@
         "    print_line(80, color=\"green\")\n",
         "    install_webui(repo_dir, cprint(f\"Unpacking {repo_type} Webui\", color=\"green\", tqdm_desc=True))\n",
         "    prepare_environment()\n",
-        "    setup_directories ()\n",
+        "    \n",
         "    configure_output_path(config_file, output_dir, output_subdir)\n",
         "\n",
         "    print_line(80, color=\"green\")\n",
         "    if update_webui and not commit_hash:\n",
         "        update_repo(cwd=repo_dir, args=\"-X theirs --rebase --autostash\")\n",
+        "        \n",
+        "    setup_directories ()\n",
         "\n",
         "    if commit_hash:\n",
         "        reset_repo(repo_dir, commit_hash)\n",
@@ -288,40 +289,50 @@
         "    cprint(f\"Branch: {current_branch}, Commit hash: {current_commit_hash}\", color=\"green\")\n",
         "\n",
         "    print_line(80, color=\"green\")\n",
+        "    cprint(\"Hotfixes and Optimization:\", color=\"green\")\n",
         "\n",
         "    if dpmpp_2m_v2_patch:\n",
         "        dpmpp_2m_v2_url  = \"https://gist.githubusercontent.com/Linaqruf/514d40676e97a70ffc3a2451bbf51555/raw/3fa447ebfac6b98a25485374b70447f848267589/01-add-DPMPP-2M-V2.patch\"\n",
         "        patch_repo(url=dpmpp_2m_v2_url, dir=patches_dir, cwd=repo_dir, whitespace_fix=True, quiet=True)\n",
         "        shutil.rmtree(patches_dir)\n",
-        "        cprint(\" [-] Hires Prompt patch done!\", color=\"green\")\n",
+        "        cprint(\" [-] DPM++ 2m V2 and DPM++ 2m Karras V2 patch done!\", color=\"green\")\n",
+        "\n",
+        "    if ram_alloc_patch:\n",
+        "        os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
+        "        cprint(\" [-] Camenduru's ram allocation patch done!\", color=\"green\")\n",
         "\n",
         "    if colab_optimizations:\n",
         "        lowram_patch_url = \"https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch\"\n",
         "        stable_diffusion_repo_dir = os.path.join(repo_dir, \"repositories/stable-diffusion-stability-ai\")\n",
         "        patch_repo(url=lowram_patch_url, dir=patches_dir, cwd=stable_diffusion_repo_dir, quiet=True)\n",
         "        shutil.rmtree(patches_dir)\n",
+        "        cprint(\" [-] Stable Diffusion V2.x lowram patch done!\", color=\"green\")\n",
         "\n",
         "        subprocess.run([\"sed\", \"-i\", f\"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\", os.path.join(repo_dir, \"modules\", \"sd_models.py\")])\n",
         "        subprocess.run([\"sed\", \"-i\", f\"s@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@\", os.path.join(repo_dir, \"webui.py\")])\n",
         "        subprocess.run([\"sed\", \"-i\", f\"s@map_location='cpu'@map_location='cuda'@\", os.path.join(repo_dir, \"modules\", \"extras.py\")])\n",
+        "        cprint(\" [-] TheLastben's colab optimization done!\", color=\"green\")\n",
         "\n",
         "    if mobile_optimizations:\n",
         "        audio_url    = \"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\"\n",
         "        audio_thread = threading.Thread(target=play_audio, args=(audio_url,))\n",
         "        audio_thread.start()\n",
+        "        cprint(\" [-] Mobile Optimization done!\", color=\"green\")\n",
         "\n",
+        "    if \"anapnoe\" in repo_name and \"9931e861dfb128735c4a928a7beb5b5c0af30593\" in current_commit_hash:\n",
+        "        hires_prompt_fix = \"https://gist.githubusercontent.com/Linaqruf/8fef456d53604f8c3bcd16722ea7d2f6/raw/a3382087c6e32f9a171f4b5e8aeb572a61682801/0001-Add-New-Label-for-Hires-Prompt.patch\"\n",
+        "        patch_repo(url=hires_prompt_fix, dir=patches_dir, cwd=repo_dir, whitespace_fix=True, quiet=True)\n",
+        "        shutil.rmtree(patches_dir)\n",
+        "        cprint(\" [-] Hires Prompt patch done!\", color=\"green\")\n",
+        "\n",
+        "    print_line(80, color=\"green\")\n",
+        "    \n",
         "    if update_extensions:\n",
         "        batch_update(fetch=True, directory=extensions_dir, desc=cprint(f\"Updating extensions\", color=\"green\", tqdm_desc=True))\n",
         "\n",
         "    if not os.path.exists(download_list):\n",
         "        download_list_url = \"https://raw.githubusercontent.com/Linaqruf/sd-notebook-collection/main/config/download_list.txt\"\n",
         "        aria2_download(os.path.dirname(download_list), os.path.basename(download_list), download_list_url, quiet=True)\n",
-        "\n",
-        "    if \"anapnoe\" in repo_name and \"9931e861dfb128735c4a928a7beb5b5c0af30593\" in current_commit_hash:\n",
-        "        hires_prompt_fix = \"https://gist.githubusercontent.com/Linaqruf/8fef456d53604f8c3bcd16722ea7d2f6/raw/a3382087c6e32f9a171f4b5e8aeb572a61682801/0001-Add-New-Label-for-Hires-Prompt.patch\"\n",
-        "        patch_repo(url=hires_prompt_fix, dir=patches_dir, cwd=repo_dir, whitespace_fix=True, quiet=False)\n",
-        "        shutil.rmtree(patches_dir)\n",
-        "        cprint(\"Hires Prompt patch done!\")\n",
         "\n",
         "    elapsed_time = py_utils.calculate_elapsed_time(start_time)\n",
         "    print_line(80, color=\"green\")\n",
@@ -794,7 +805,6 @@
       "cell_type": "code",
       "source": [
         "#@title ## **Start Cagliostro Colab UI**\n",
-        "\n",
         "import random\n",
         "import string\n",
         "from pydantic import BaseModel\n",
@@ -824,7 +834,7 @@
         "accelerator           = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-sdp-no-mem-attention', 'opt-split-attention']\n",
         "auto_select_model     = False # @param {type: 'boolean'}\n",
         "auto_select_vae       = True # @param {type: 'boolean'}\n",
-        "additional_arguments  = \"--lowram --no-half-vae --theme dark\" #@param {type: 'string'}\n",
+        "additional_arguments  = \"--lowram --theme dark\" #@param {type: 'string'}\n",
         "\n",
         "# GRADIO AUTH\n",
         "user                  = \"cagliostro\"\n",
@@ -891,13 +901,18 @@
         "    config[\"show_progress_every_n_steps\"] = 10\n",
         "    config[\"show_progressbar\"] = True\n",
         "    config[\"samples_filename_pattern\"] = \"[model_name]_[seed]\"\n",
+        "    config[\"show_progress_type\"] = \"Approx NN\" # Full, Approx NN, TAESD, Approx cheap\n",
+        "    config[\"live_preview_content\"] = \"Prompt\" # Combined, Prompt, Negative Prompt\n",
+        "    config[\"hires_fix_show_sampler\"] = True\n",
+        "    config[\"hires_fix_show_prompts\"] = True\n",
         "    config[\"state\"] = [\"tabs\"]\n",
         "    config[\"state_txt2img\"] = [\"prompt\", \"negative_prompt\", \"styles\", \"sampling\", \"sampling_steps\", \"width\", \"height\", \"batch_count\", \"batch_size\", \"hires_resize_y\", \"hires_resize_x\", \"hires_scale\", \"hires_steps\", \"hires_upscaler\", \"hires_fix\", \"tiling\", \"restore_faces\", \"cfg_scale\", \"hires_denoising_strength\"]\n",
         "    config[\"state_img2img\"] = [\"prompt\", \"negative_prompt\", \"styles\", \"sampling\", \"resize_mode\", \"sampling_steps\", \"tiling\", \"restore_faces\", \"width\", \"height\", \"batch_count\", \"batch_size\", \"cfg_scale\", \"denoising_strength\"]\n",
         "    config[\"state_extensions\"] = [\"control-net\"]\n",
         "\n",
         "    quicksettings_values = [\"sd_model_checkpoint\", \"sd_vae\", \"CLIP_stop_at_last_layers\", \n",
-        "                            \"use_old_karras_scheduler_sigmas\", \"always_discard_next_to_last_sigma\"]\n",
+        "                            \"use_old_karras_scheduler_sigmas\", \"always_discard_next_to_last_sigma\",\n",
+        "                            \"token_merging_ratio\", \"s_min_uncond\"]\n",
         "\n",
         "    if \"quicksettings\" in config:\n",
         "        config[\"quicksettings\"] = \", \".join(quicksettings_values)\n",
