feat: added extensions to filename in custom download corner

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -77,7 +77,7 @@
         "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
         "colab_optimizations = True  # @param {type:'boolean'}\n",
         "# @markdown > Specify `mobile_optimizations` to keep colab tab alive for mobile users\n",
-        "mobile_optimizations = True  # @param {type:'boolean'}\n",
+        "mobile_optimizations = False  # @param {type:'boolean'}\n",
         "\n",
         "################################\n",
         "# DIRECTORY CONFIG\n",
@@ -745,6 +745,8 @@
         "                print_line(80, color=\"green\")\n",
         "                if \"|\" in url:\n",
         "                    url, filename = map(str.strip, url.split(\"|\"))\n",
+        "                    if not filename.endswith((\".safetensors\", \".ckpt\", \".pt\", \"pth\")):\n",
+        "                        filename = filename + os.path.splitext(get_filename(url))[1]\n",
         "                else:\n",
         "                    if not url.startswith(\"fuse:\"):\n",
         "                        filename = get_filename(url)\n",
