--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -368,7 +368,7 @@
         "# @markdown ### **Stable Diffusion v1.x Model**\n",
         "Anything_V3_0         = False  # @param {type: 'boolean'}\n",
         "AnyLoRA_Default       = False  # @param {type: 'boolean'}\n",
-        "AnyLoRA_Anime_Mix     = True  # @param {type: 'boolean'}\n",
+        "AnyLoRA_Anime_Mix     = False  # @param {type: 'boolean'}\n",
         "Ghost_Note_Delta      = False  # @param {type: 'boolean'}\n",
         "SDHK_V3               = False  # @param {type: 'boolean'}\n",
         "Majic_Mix_V5          = False  # @param {type: 'boolean'}\n",
